# project

authors-haven/: .gitignore
authors-haven/src/: conftest.py  local.yml  manage.py
fastapi-boiler/: Dockerfile  alembic.ini  docker-compose.yml  requirements.txt
fastapi-boiler/migrations/: env.py
fastapi-boiler/src/: config.py  database.py  main.py
fastapi-docu/: docker-compose.yml
fastapi-jwt/jwt-demo/: pyproject.toml
fastapi-jwt/jwt-demo/jwt_demo/: authentication.py  database.py  db_models.py  local_storage.db  main.py  schemas.py
fastapi-jwt/jwt-demo/jwt_demo/database_crud/: item_db_crud.py  user_db_crud.py
fastapi-jwt/jwt-demo/jwt_demo/permissions/: base.py  models_permissions.py  roles.py
fastapi-jwt/jwt-demo/jwt_demo/routers/: items.py  users.py
fastapi-prac2/: 1.md
fastapi-signup/fastapi-signup/: README.md  pyproject.toml
fastapi-signup/fastapi-signup/fastapi_signup/: create_db.py  main.py  sql_app.db
fastapi-signup/fastapi-signup/fastapi_signup/auth/: auth.py
fastapi-signup/fastapi-signup/fastapi_signup/config/: config.py
fastapi-signup/fastapi-signup/fastapi_signup/database/: database.py
fastapi-signup/fastapi-signup/fastapi_signup/models/: models.py
fastapi-signup/fastapi-signup/fastapi_signup/routes/: entry.py  user.py
fastapi-signup/fastapi-signup/fastapi_signup/schema/: schema.py
fastapi-signup/fastapi-signup/fastapi_signup/utils/: helpers.py
fastapi-signup/fastapi-signup/tests/: test_entry_api.py  test_helpers.py  test_user_api.py
fastapi-tdd/: README.md
golang-jwt/: go.mod  main.go  readme.md
(+59 files in other folders)
